<resources>
    <string name="app_name">Head Hunter App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Продолжить</string>
    <string name="search_work">Поиск работы</string>
    <string name="entry_password">Войти с паролем</string>
    <string name="search_working">Поиск сотрудников</string>
    <string name="new_vacansiece">Размещение вакансий и дотуп к базе резюме</string>
    <string name="search_people">Я ищу сотрудников</string>
    <string name="entry_app">Вход в личный кабинет</string>
    <string name="pass_text_entry_code">Напишите его, чтобы подтвердить, что это вы, а не кто-то другой входит в личный кабинет</string>
    <string name="search_tab">Поиск</string>
    <string name="favourites_tab">Избранное</string>
    <string name="tab_send">Отклик</string>
    <string name="tab_massage">Сообщения</string>
    <string name="tab_profile">Профиль</string>
    <string name="people_many">человек</string>
    <string name="people_one">человек</string>
    <string name="people_few">человека</string>
    <string name="job_title">Должность, ключевые слова</string>
    <string name="filter_vacancy">По соответствию</string>
    <string name="job_vacancy">Должность по подходящим вакансиям</string>
    <string name="favourite">Избранное</string>
</resources>